--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -11,6 +11,9 @@
       <li>
         <small>{{ entry.date_added|date:'M d, Y H:i' }}</small>
         <p>{{ entry.text|linebreaks }}</p>
+        <p>
+          <a href="{% url 'learning_logs:edit_entry' entry.id %}">Edit entry</a>
+        </p>
       </li>
     {% empty %}
       <li>There are no entries for this topic yet.</li>
